aligned user text right. fixed comments in jsx in chatbox and chatContainer

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -92,6 +92,7 @@ body {
   padding-left: 4%;
   padding-right: 4%;
   background-color: orange;
+  text-align: right;
 }
 
 .user-bubble-right {
